Python Practice using methods involving lists

--- a/Python Practice.ipynb
+++ b/Python Practice.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Untitled87.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPWtK3V0uCdNdvXi7DAz+SA",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,49 +18,13 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "HrrU3zGroTrk"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [],
       "source": [
-        "\n",
-        "# Sodution 1: Recursive solusion\n",
-        "# O(2^n) time | O(n) space\n",
-        "def get_Nth_fibonacci(n):\n",
-        "    if n == 2:\n",
-        "        return 1\n",
-        "    elif n == 1:\n",
-        "        return 0\n",
-        "    else:\n",
-        "        return get_Nth_fibonacci(n - 1) + get_Nth_fibonacci(n - 2)\n",
-        "\n",
-        "# Solution 2: using memoization\n",
-        "# O(n) time | O(n) space\n",
-        "# https://www.quora.com/What-is-memoization\n",
-        "def get_Nth_fibonacci(n, memoize = {1: 0, 2: 1}):\n",
-        "    if n in memoize:\n",
-        "        return memoize[n]\n",
-        "    else:\n",
-        "        memoize[n] = get_Nth_fibonacci(n - 1, memoize) + get_Nth_fibonacci(n - 2, memoize)\n",
-        "        return memoize[n]\n",
-        "\n",
-        "# Solution 3: iterative\n",
-        "# O(2^n) time | O(1) space\n",
-        "def get_Nth_fibonacci(n):\n",
-        "    last_two = [0, 1]\n",
-        "    counter = 3\n",
-        "    while counter <= n:\n",
-        "        next_fib = last_two[0] + last_two[1]\n",
-        "        last_two[0] = last_two[1]\n",
-        "        last_two[1] = next_fib\n",
-        "        counter += 1\n",
-        "    return last_two[1] if n > 1 else last_two[0]\n",
-        "\n",
-        "\n",
-        "number_of_fib = 6\n",
-        "print(number_of_fib, \"th Fibonacci number is: \", get_Nth_fibonacci(number_of_fib))"
+        "<a href=\"https://colab.research.google.com/github/shanksghub/Python-Practice/blob/main/Python%20Practice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
